--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smart-wallet",
-  "private": true,
+  "private": "true",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -14,7 +14,7 @@
     "grommet-icons": "^4.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
