--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "ag-charts-react": "^9.1.1",
         "grommet": "^2.36.0",
         "grommet-icons": "^4.12.1",
         "react": "^18.2.0",
