--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "ag-charts-react": "^9.1.1",
         "grommet": "^2.36.0",
         "grommet-icons": "^4.12.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
         "styled-components": "^5.1.0"
     },
     "devDependencies": {
